# tareas

./: pyproject.toml
database/: tareas.sql
src/: main.py
src/controllers/: TareaController.py  UsuariosController.py
src/models/: TareasModel.py  UsuariosModel.py  database.py  schemasModel.py
src/views/: LoginView.py  TareasView.py  UsuariosView.py  dashboard.py  main.py
